Update Filter Button Switching and Fix filter spacing

--- a/ce-mob/css/main.css
+++ b/ce-mob/css/main.css
@@ -755,7 +755,7 @@ a.scroll-event:hover{
     box-shadow: inset 0 2px 6px rgba(0,0,0,0.4);
     color:#fff;
     text-shadow: 0 1px 1px rgba(0,0,0,0.5);
-    border:none;
+    border-left-color: transparent;
 }
 
 .search-result{
@@ -831,6 +831,10 @@ a.scroll-event:hover{
 
 .overlay{position:  fixed; top:180px;left:0;right:0;bottom:0;z-index:99998;}
 .filter-wrapper{
+    width:320px;
+    margin:0 auto;
+}
+.filter-container{
     -moz-box-shadow: inset 0 0 4px rgba(0,0,0,0.1);
     -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.1);
     box-shadow: inset 0 1px 3px rgba(0,0,0,0.15);
@@ -948,13 +952,16 @@ behavior: url(/cdn/htc/PIE.htc);
     width:100px;
 }
 
-.filter-wrapper .btn-primary{
+.filter-buttons{padding-top:20px;}
+
+.filter-buttons .btn{
     width:300px;
     padding: 8px 0 8px;
     padding-left:0;
     padding-right:0;
     margin: 5px 0;
 }
+
 .distance-filter .btn-group .btn{
     padding:6px 23px;
 }
